Fixed the styling for display shift data

--- a/client/src/scss/pages/_shifts.scss
+++ b/client/src/scss/pages/_shifts.scss
@@ -118,6 +118,7 @@
         .shift-data {
             width: 90%;
             display: flex;
+            justify-content: space-around;
             padding: 0.5em;
             margin-bottom: 1em;
             border-radius: 0.5em;
